--- a/renovate.json
+++ b/renovate.json
@@ -1,22 +1,23 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
-  "automerge": false,
-  "branchName": "develop",
-  "timezone": "Europe/Paris",
-  "schedule": ["after 8am on tuesday"],
-  "scheduleRules": [
-    {
-      "timezone": "Europe/Paris",
-      "dayOfWeek": [2],
-      "time": "08:00"
-    }
-  ],
-  "packageRules": [
-    {
-      "updateTypes": ["patch"],
-      "automerge": false,
-      "packageFile": "package.json"
-    }
-  ]
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": ["config:base", "group:monorepos"],
+    "major": {
+        "enabled": false
+    },
+    "minor": {
+        "enabled": false
+    },
+    "automerge": false,
+    "branchName": "develop",
+    "timezone": "Europe/Paris",
+    "schedule": ["after 8am on tuesday"],
+    "packageRules": [
+        {
+            "matchUpdateTypes": ["patch"],
+            "automerge": false,
+            "packageFile": "package.json"
+        }
+    ],
+    "prConcurrentLimit": 1,
+    "labels": ["review-needed"]
 }
