--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
     "automerge": false,
     "branchPrefix": "renovate",
     "baseBranches": [
-        "develop"
+        "main"
     ],
     "timezone": "Europe/Paris",
     "schedule": [
