--- a/package.json
+++ b/package.json
@@ -6,7 +6,40 @@
   "license": "Apache-2.0",
   "dependencies": {
     "commander": "2.20.3",
-    "lodash": "4.17.20",
+    "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "class-validator": "0.14.0",
+    "cls-rtracer": "2.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "i18next": "^22.4.13",
+    "i18next-http-middleware": "^3.3.0",
+    "html-minifier": "^4.0.0",
+    "joi": "^17.8.3",
+    "jsforce": "^1.11.0",
+    "json2csv": "^5.0.6",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.0",
+    "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.41",
+    "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
+    "pg": "^8.5.1",
+    "postgres-interval": "^4.0.0",
+    "qs": "^6.11.0",
+    "reflect-metadata": "^0.1.13",
+    "stripe": "8.206.0",
+    "typeorm": "0.2.38",
+    "uuid": "^9.0.0",
+    "winston": "^3.3.3",
+    "xlsx": "^0.18.5",
+    "yup": "^1.0.2"
     "@date-io/date-fns": "2.10.0",
     "@date-io/moment": "2.10.0"
   }
