--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "author": "Philip",
   "license": "Apache-2.0",
   "dependencies": {
-    "commander": "2.20.3",
+    "@amplitude/node": "^1.8.3",
+    "@aws-sdk/client-dynamodb": "^3.279.0",
+    "@aws-sdk/client-s3": "^3.301.0",
+    "@aws-sdk/s3-request-presigner": "^3.301.0",
+    "@joi/date": "^2.1.0",
     "axios": "^1.3.4",
     "axios-retry": "^3.4.0",
     "bcryptjs": "^2.4.3",
@@ -40,7 +44,39 @@
     "winston": "^3.3.3",
     "xlsx": "^0.18.5",
     "yup": "^1.0.2"
-    "@date-io/date-fns": "2.10.0",
-    "@date-io/moment": "2.10.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/ejs": "^3.1.1",
+    "@types/express": "^4.17.17",
+    "@types/html-minifier": "^4.0.2",
+    "@types/jest": "^29.4.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsforce": "^1.11.0",
+    "@types/json2csv": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.161",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^16.11.7",
+    "@types/node-schedule": "^2.1.0",
+    "@types/supertest": "^2.0.10",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.4",
+    "supertest": "^6.1.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
