--- a/package.json
+++ b/package.json
@@ -5,78 +5,98 @@
   "author": "Philip",
   "license": "Apache-2.0",
   "dependencies": {
-    "@amplitude/node": "^1.8.3",
-    "@aws-sdk/client-dynamodb": "^3.279.0",
-    "@aws-sdk/client-s3": "^3.301.0",
-    "@aws-sdk/s3-request-presigner": "^3.301.0",
-    "@joi/date": "^2.1.0",
-    "axios": "^1.3.4",
-    "axios-retry": "^3.4.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "class-validator": "0.14.0",
-    "cls-rtracer": "2.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "i18next": "^22.4.13",
-    "i18next-http-middleware": "^3.3.0",
-    "html-minifier": "^4.0.0",
-    "joi": "^17.8.3",
-    "jsforce": "^1.11.0",
-    "json2csv": "^5.0.6",
-    "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.0",
-    "moment-range": "^4.0.2",
-    "moment-timezone": "^0.5.41",
-    "morgan": "^1.10.0",
-    "node-schedule": "^2.1.1",
-    "pg": "^8.5.1",
-    "postgres-interval": "^4.0.0",
-    "qs": "^6.11.0",
-    "reflect-metadata": "^0.1.13",
-    "stripe": "8.206.0",
-    "typeorm": "0.2.38",
-    "uuid": "^9.0.0",
-    "winston": "^3.3.3",
-    "xlsx": "^0.18.5",
-    "yup": "^1.0.2"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/ejs": "^3.1.1",
-    "@types/express": "^4.17.17",
-    "@types/html-minifier": "^4.0.2",
-    "@types/jest": "^29.4.0",
-    "@types/joi": "^17.2.3",
-    "@types/jsforce": "^1.11.0",
-    "@types/json2csv": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/lodash": "^4.14.161",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^16.11.7",
-    "@types/node-schedule": "^2.1.0",
-    "@types/supertest": "^2.0.10",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "copyfiles": "^2.4.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "husky": "^8.0.3",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.4",
-    "supertest": "^6.1.3",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
-  }
+        "@date-io/core": "^1.3.13",
+        "@date-io/date-fns": "^1.3.13",
+        "@date-io/moment": "^1.3.13",
+        "@fontsource/roboto": "^4.5.0",
+        "@hookform/resolvers": "2.8.0",
+        "@iconify-icons/simple-icons": "1.1.44",
+        "@iconify/react": "1.1.4",
+        "@material-ui/core": "4.12.3",
+        "@material-ui/icons": "4.11.2",
+        "@material-ui/lab": "4.0.0-alpha.60",
+        "@material-ui/pickers": "3.3.10",
+        "@material-ui/styles": "4.10.0",
+        "@sentry/react": "^7.1.1",
+        "@sentry/tracing": "^7.1.1",
+        "@stripe/react-stripe-js": "^1.4.1",
+        "@stripe/stripe-js": "^1.17.1",
+        "axios": "^1.3.4",
+        "chroma-js": "^2.1.2",
+        "clsx": "^1.1.1",
+        "date-fns": "^2.16.1",
+        "formik": "^2.1.5",
+        "history": "^4.10.1",
+        "i18next": "^22.4.10",
+        "i18next-browser-languagedetector": "^7.0.1",
+        "js-file-download": "^0.4.12",
+        "jss": "^10.3.0",
+        "jss-rtl": "^0.3.0",
+        "jwt-decode": "^3.1.2",
+        "lodash": "^4.17.19",
+        "moment": "^2.27.0",
+        "moment-duration-format": "^2.3.2",
+        "moment-range": "^4.0.2",
+        "moment-timezone": "^0.5.32",
+        "notistack": "^1.0.10",
+        "nprogress": "^0.2.0",
+        "prop-types": "^15.7.2",
+        "qs": "^6.10.1",
+        "react": "^16.13.1",
+        "react-app-polyfill": "^1.0.6",
+        "react-beautiful-dnd": "^13.1.0",
+        "react-date-range": "^1.1.3",
+        "react-dom": "^16.13.1",
+        "react-feather": "^2.0.10",
+        "react-helmet": "^6.1.0",
+        "react-hook-form": "7.15.3",
+        "react-https-redirect": "^1.1.0",
+        "react-i18next": "^12.2.0",
+        "react-icons": "^4.7.1",
+        "react-input-mask": "^3.0.0-alpha.2",
+        "react-lottie": "^1.2.3",
+        "react-number-format": "4.7.3",
+        "react-perfect-scrollbar": "^1.5.8",
+        "react-query": "^3.16.0",
+        "react-resize-aware": "3.1.1",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.3",
+        "recharts": "^2.1.16",
+        "use-debounce": "^9.0.3",
+        "xlsx": "^0.18.5",
+        "yup": "^0.28.5"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.11.9",
+        "@types/history": "^4.7.7",
+        "@types/jest": "^25.2.3",
+        "@types/jwt-decode": "^3.1.0",
+        "@types/lodash": "^4.14.158",
+        "@types/node": "^13.13.15",
+        "@types/nprogress": "^0.2.0",
+        "@types/react": "^16.9.43",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-helmet": "^5.0.16",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/yup": "^0.28.3",
+        "@typescript-eslint/eslint-plugin": "^4.24.0",
+        "@typescript-eslint/parser": "^4.24.0",
+        "chai": "^4.3.0",
+        "chai-enzyme": "^1.0.0-beta.0",
+        "chai-jest-diff": "^1.0.2",
+        "dirty-chai": "^2.0.1",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint": "^7.0.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^12.3.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.19.0",
+        "husky": "^8.0.1",
+        "prettier": "^2.0.2",
+        "typescript": "^4.1.2"
+    }
 }
